--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "createcellapp",
   "main": "maincellapp",
   "scripts": {
-    "test": "npm test"
+    "hello":"node helloworld.js"  
   },
   "repository": {
     "type": "git",
